Dark mode & Fixed Mobile Footer

--- a/css/desktop.css
+++ b/css/desktop.css
@@ -1,3 +1,9 @@
+.container {
+    margin: auto;
+    max-width: 1000px;
+    padding: 0 3em;
+}
+
 header {
     margin-top: 4em;
     display: flex;
